--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
         <option value="2">Two</option>
         <option value="3">Three</option>
       </select></div>
-        <div> <select class="custom-select custom-select-lg mb-3">
-        <option selected>Patrimonio Inmaterial</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+        <div> <select id="selectProvincias" class="custom-select custom-select-lg mb-3">
+   
       </select></div>
         <div class="custom-control custom-radio">
             <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
@@ -49,8 +46,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
     <script src="assets/scripts/init.js"></script>
-    <script src="assets/scripts/app.js"></script>
     <script src="assets/scripts/locations.js"></script>
+    <script src="assets/scripts/app.js"></script>
+
 
 </body>
 
