--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
         </div>
         <div class="form-group">
           <label for="formGroupExampleInput2">Localidad</label>
-          <input
-            type="text"
-            class="form-control"
-            id="formGroupExampleInput2"
-            placeholder="Introduzca la localidad"
-          />
+          </div>
+        <div>
+          <select id="selectDistrito" class="custom-select custom-select-lg mb-3">
+            <option selected>Distrito</option>
+          </select>
+          <select id="selectCanton" class="custom-select custom-select-lg mb-3">
+            <option selected>Canton</option>
+          </select>
+          <select id="selectProvincia" class="custom-select custom-select-lg mb-3">
+            <option selected>Provincia</option>
+          </select>
         </div>
+
         <div class="form-group">
           <label for="formGroupExampleInput2">Edad</label>
           <input
@@ -125,9 +131,6 @@
         <div class="form-group">
         <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="¿Por qué?" rows="3"></textarea>
         </div>
-
-
-
         <div class="form-group">
           <h6 for="exampleFormControlTextarea1">Vitalidad de la manifestación</h6>
           <label for="exampleFormControlTextarea1">¿Lo han aprendido sus familiares o vecinxs?</label>
@@ -156,7 +159,10 @@
         <div class="form-group">
           <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="¿Disponibilidad de ingredientes, de los objetos o espacios?" rows="3"></textarea>
         </div>
-
+        <div class="form-group">
+          <h6 for="exampleFormControlTextarea1">Vitalidad de la manifestación</h6>
+          <label for="exampleFormControlTextarea1">¿Lo han aprendido sus familiares o vecinxs?</label>
+       </div>
       </div>
     </form>
     <script
