--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <div class="form-group">
-          <h6 for="exampleFormControlTextarea1">Detalles/Contexto</h6>
+          <h5 for="exampleFormControlTextarea1">Detalles/Contexto</h5>
           <label for="exampleFormControlTextarea1">¿Consideran que estos espacios en los que se rescata este tipo de información sean importantes de continuar o realizar con la comunidad costarricense?</label>
        </div>
         <div class="custom-control custom-radio">
@@ -132,7 +132,7 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="¿Por qué?" rows="3"></textarea>
         </div>
         <div class="form-group">
-          <h6 for="exampleFormControlTextarea1">Vitalidad de la manifestación</h6>
+          <h5 for="exampleFormControlTextarea1">Vitalidad de la manifestación</h5>
           <label for="exampleFormControlTextarea1">¿Lo han aprendido sus familiares o vecinxs?</label>
        </div>
         <div class="custom-control custom-radio">
@@ -160,9 +160,30 @@
           <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="¿Disponibilidad de ingredientes, de los objetos o espacios?" rows="3"></textarea>
         </div>
         <div class="form-group">
-          <h6 for="exampleFormControlTextarea1">Vitalidad de la manifestación</h6>
-          <label for="exampleFormControlTextarea1">¿Lo han aprendido sus familiares o vecinxs?</label>
+          <h5 for="exampleFormControlTextarea1">Importancia para la comunidad</h5>
+          <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="customCheck1">
+            <label class="custom-control-label" for="customCheck1">Manifestación vigente</label>
+        <div> 
+          <input type="checkbox" class="custom-control-input" id="customCheck2">
+          <label class="custom-control-label" for="customCheck2">Manifestación vigente vulnerable</label>
+        </div>
+        <div> 
+          <input type="checkbox" class="custom-control-input" id="customCheck3">
+          <label class="custom-control-label" for="customCheck3">Manifestación de la memoria</label>
+        </div>          
+          </div>
        </div>
+       <div class="form-group">
+        <h5 for="exampleFormControlTextarea1">Datos de control</h5>
+        <label for="formGroupExampleInput2">Registrado por</label>
+        <input
+          type="text"
+          class="form-control"
+          id="formGroupExampleInput2"
+          placeholder="Introduzca el nombre "
+        />
+      </div>
       </div>
     </form>
     <script
