--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 
-<body>
+<body id="1" class="home">
     <div class="container-fluid">
         <header class="row py-4 border-bottom header">
             <img src="assets/images/firma-ucr-c.svg"></img>
@@ -214,7 +214,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
-    <script src="src/scripts/locations.js"></script>
+   
     <script src="src/scripts/init.js"></script>
     <script src="src/scripts/app.js"></script>
 
