--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ficha de Registro</title>
+    <title >Ficha de Registro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
@@ -18,7 +18,7 @@
             <img src="assets/images/firma-ucr-c.svg"></img>
         </header>
     </div>
-    <h1 style="text-align: center">
+    <h1 style="text-align: center; margin-top: 50px; margin-bottom: 50px;">
         Ficha de Registro TCU-374/486 Patrimonio y Cultura
     </h1>
     <div class="container">
@@ -159,16 +159,23 @@
         </form>
 
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top: 70px;">
         <footer class="row py-3 border-top footer">
             <div class="col-sm imagenFooter">
                 <img src="assets/images/ucr.svg">
 
             </div>
 
+            <div class="col-sm imagenFooter">
+                <img src="assets/images/firma-vas-vertical.png">
 
+            </div>
+            <div class="col-sm imagenFooter">
+                <img src="assets/images/tcu-logo-vertical.png">
 
-            <div class="col">
+            </div>
+
+            <!-- <div class="col">
                 <h5>Section</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text">Home</a></li>
@@ -199,7 +206,7 @@
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text">FAQs</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text">About</a></li>
                 </ul>
-            </div>
+            </div> -->
 
             <P class="text-center avisoCopy">&copy;2021 Universidad de Costa Rica -Tel. 2511-4000. Aviso Legal. Última
                 actualización: agosto de 2021.</P>
