--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ficha de Registro</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="src/css/styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 </head>
-
-
-<body id="1" class="home">
+<body id="home" class="init">
     <div class="container-fluid">
         <header class="row py-4 border-bottom header">
-            <img src="assets/images/firma-ucr-c.svg"></img>
+            <a id="linkHeader">
+            <img id="imagenHeader"src="assets/img/firma-ucr-c.svg"></img>
+        </a>
         </header>
     </div>
-    <h1 style="text-align: center">
+    <h1 class="text-center">
         Ficha de Registro TCU-374/486 Patrimonio y Cultura
     </h1>
     <div class="container">
@@ -39,7 +36,7 @@
                 <label for="formGroupExampleInput2">Localidad</label>
             </div>
             <div>
-                <select id="selectProvincia" class="custom-select custom-select-lg mb-3">
+                <select id="selectProvincia" class=" custom-select custom-select-lg mb-3">
 
                 </select>
                 <select id="selectCanton" class="custom-select custom-select-lg mb-3">
@@ -49,7 +46,7 @@
 
                 </select>
 
-
+              
             </div>
 
             <div class="form-group">
@@ -160,9 +157,9 @@
 
     </div>
     <div class="container-fluid">
-        <footer class="row py-3 border-top footer">
+        <footer class="row py-3 border-top "id="footer">
             <div class="col-sm imagenFooter">
-                <img src="assets/images/ucr.svg">
+                <img src="assets/img/ucr.svg">
 
             </div>
 
@@ -208,17 +205,6 @@
         </footer>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
-   
-    <script src="src/scripts/init.js"></script>
-    <script src="src/scripts/app.js"></script>
-
-
+    
 </body>
-
 </html>
