--- a/src/index.html
+++ b/src/index.html
@@ -161,6 +161,10 @@
                 </div>
 
             </div>
+
+            <div>
+                <button type="button" class="btn btn-primary" id="btnGuardar" style="margin-top: 30px; margin-left: 500px;">Guardar</button>
+            </div>
         </form>
 
     </div>
