--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
+   
+
 </head>
-<body id="home" class="init">
+<body id="start" class="home">
+   
     <div class="container-fluid">
         <header class="row py-4 border-bottom header">
             <a id="linkHeader">
@@ -18,6 +21,7 @@
     <h1 class="text-center" style="margin-top: 30px; margin-bottom: 30px;"> 
         Ficha de Registro TCU-374/486 Patrimonio y Cultura
     </h1>
+    <div id='calendar' class="container"></div>
     <div class="container">
         <form>
 
