arreglos en la pantalla principla

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
             <a id="linkHeader">
                 <img id="imagenHeader" src="assets/img/firma-ucr-c.svg"></img>
             </a>
+            <div style="margin-left: 1000px; ">  <a href="#" style=" font-weight: normal; margin-top: 5px; background-color: #41ade7; border-color: #030303; font-size: 25px;" class="btn btn-info" id="btnSeleccion" role="button">Ver datos de eventos</a></div>
+           
+            <!-- <p><a >Ver datos de eventos</a></p> -->
         </header>
     </div>
     <h1 class="text-center" style="margin-top: 30px; margin-bottom: 30px;">
@@ -28,7 +31,7 @@
 
         <form>
 
-            <div id="datosEvento" class="container  row shadow-sm p-3 mb-5 bg-body rounded ">
+            <div id="datosEvento"  style="display:none" class="container  row shadow-sm p-3 mb-5 bg-body rounded " >
                 <h5 for="exampleFormControlTextarea1" style="margin-bottom: 20px;">Datos del evento</h5>
 
                 <h6 id="lblNombreEvento">Nombre del evento </h6>
@@ -44,140 +47,146 @@
                 <h6 id="lblHoraInicio">Hora de inicio : ...</h6>
 
                 <h6 id="lblHoraFin">Hora de finalizacion : ...</h6>
-    
 
-
-                <div class="col-1">
+                <!-- <div class="col-1">
                     <button id="btnSeleccion" class="btn btn-primary">Eventos</button>
-                </div>
-
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Nombre del informante clave</label>
-                <input type="text" class="form-control" id="formNombreInformante" placeholder="Introduzca el nombre" />
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Edad</label>
-                <input type="text" class="form-control" id="formEdad" placeholder="Introduzca la edad" />
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Localidad</label>
-            </div>
-            <div>
-                <select id="selectProvincia" class=" custom-select custom-select-lg mb-3">
-
-                </select>
-                <select id="selectCanton" class="custom-select custom-select-lg mb-3">
-
-                </select>
-                <select id="selectDistrito" class="custom-select custom-select-lg mb-3">
-
-                </select>
-
-
-            </div>
-            <div id="formSeleccionEvento">
-                <select class="custom-select custom-select-lg mb-3">
-                    <option selected>Patrimonio Material</option>
-                    <option value="1">Monumentos Sitios</option>
-                    <option value="2">Artefactos Históricos</option>
-                    <option value="3">Fotografías</option>.
-                    <option value="5">Conjunto Arquitectónico</option>
-                    <option value="6">Otro</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
-                <input type="text" class="form-control" id="formInputOtro" placeholder="Introduzca el patrimonio " />
-                <div id="formSeleccionEvento2">
-                    <select class="custom-select custom-select-lg mb-3">
-                        <option selected>Patrimonio Inmaterial</option>
-                        <option value="1">Leyenda/Historia/Cuento/Poema/Retahíla</option>
-                        <option value="2">Receta Tradicional</option>
-                        <option value="3">Remedio/Curación</option>
-                        <option value="4">Juego Tradicional</option>
-                        <option value="5">Tradición Comunitaria</option>
-                        <option value="6">Otro</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
-                    <input type="text" class="form-control" id="formInputOtro2"
-                        placeholder="Introduzca el patrimonio " />
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Descripción de la manifestación patrimonial</label>
-                    <textarea class="form-control" id="textDescripcionManifestacion" rows="3"></textarea>
-                </div>
-                <div class="form-group">
-                    <h5 for="exampleFormControlTextarea1">Detalles/Contexto</h5>
-                    <label for="exampleFormControlTextarea1">¿Consideran que estos espacios en los que se
-                        rescata este tipo de información sean importantes de continuar o realizar con la
-                        comunidad costarricense?</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="si1" name="customRadio" class="custom-control-input" />
-                    <label class="custom-control-label" for="customRadio1">SI</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="no1" name="customRadio" class="custom-control-input" />
-                    <label class="custom-control-label" for="customRadio2">NO</label>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" id="textPorqueContexto" placeholder="¿Por qué?" rows="3"></textarea>
-                </div>
-                <div class="form-group">
-                    <h5 for="exampleFormControlTextarea1">Vitalidad de la manifestación</h5>
-                    <label for="exampleFormControlTextarea1">¿Lo han aprendido sus familiares o vecinxs?</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="si2" name="customRadio" class="custom-control-input" />
-                    <label class="custom-control-label" for="customRadio1">SI</label>
-                </div>
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="no2" name="customRadio" class="custom-control-input" />
-                    <label class="custom-control-label" for="customRadio2">NO</label>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" id="textPorqueTraspaso"
-                        placeholder="¿A quiénes ha traspasado ese conocimiento?" rows="3"></textarea>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" id="exampleFormControlTextarea1"
-                        placeholder="¿Disponibilidad de ingredientes, de los objetos o espacios?" rows="3"></textarea>
-                </div>
-                <div class="form-group">
-                    <h5 for="exampleFormControlTextarea1">Importancia para la comunidad</h5>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="checkVigente">
-                        <label class="form-check-label" for="defaultCheck1">
-                            Manifestación vigente
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="checkVulnerable">
-                        <label class="form-check-label" for="defaultCheck1">
-                            Manifestación vigente vulnerable
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="checkMemoria">
-                        <label class="form-check-label" for="defaultCheck1">
-                            Manifestación de la memoria
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <h5 for="exampleFormControlTextarea1">Datos de control</h5>
-                    <input type="text" class="form-control" id="nombreEstudiante" placeholder="Introduzca su nombre" />
+                </div> -->
+                <div class="col-1">
+                    <button id="btnVolver" class="btn btn-primary">Volver</button>
                 </div>
 
             </div>
 
-            <div>
-                <button type="button" class="btn btn-primary" id="btnGuardar"
-                    style="margin-top: 30px; margin-left: 500px;">Guardar</button>
+<div id="infoGeneral"  style="display:display" >
+
+    <div class="form-group">
+        <label for="formGroupExampleInput2">Nombre del informante clave</label>
+        <input type="text" class="form-control" id="formNombreInformante" placeholder="Introduzca el nombre" />
+    </div>
+    <div class="form-group">
+        <label for="formGroupExampleInput2">Edad</label>
+        <input type="text" class="form-control" id="formEdad" placeholder="Introduzca la edad" />
+    </div>
+    <div class="form-group">
+        <label for="formGroupExampleInput2">Localidad</label>
+    </div>
+    <div>
+        <select id="selectProvincia" class=" custom-select custom-select-lg mb-3">
+
+        </select>
+        <select id="selectCanton" class="custom-select custom-select-lg mb-3">
+
+        </select>
+        <select id="selectDistrito" class="custom-select custom-select-lg mb-3">
+
+        </select>
+
+
+    </div>
+    <div id="formSeleccionEvento">
+        <select class="custom-select custom-select-lg mb-3">
+            <option selected>Patrimonio Material</option>
+            <option value="1">Monumentos Sitios</option>
+            <option value="2">Artefactos Históricos</option>
+            <option value="3">Fotografías</option>.
+            <option value="5">Conjunto Arquitectónico</option>
+            <option value="6">Otro</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
+        <input type="text" class="form-control" id="formInputOtro" placeholder="Introduzca el patrimonio " />
+        <div id="formSeleccionEvento2">
+            <select class="custom-select custom-select-lg mb-3">
+                <option selected>Patrimonio Inmaterial</option>
+                <option value="1">Leyenda/Historia/Cuento/Poema/Retahíla</option>
+                <option value="2">Receta Tradicional</option>
+                <option value="3">Remedio/Curación</option>
+                <option value="4">Juego Tradicional</option>
+                <option value="5">Tradición Comunitaria</option>
+                <option value="6">Otro</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput2">Si digitó "Otro" ingrese cual</label>
+            <input type="text" class="form-control" id="formInputOtro2"
+                placeholder="Introduzca el patrimonio " />
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Descripción de la manifestación patrimonial</label>
+            <textarea class="form-control" id="textDescripcionManifestacion" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <h5 for="exampleFormControlTextarea1">Detalles/Contexto</h5>
+            <label for="exampleFormControlTextarea1">¿Consideran que estos espacios en los que se
+                rescata este tipo de información sean importantes de continuar o realizar con la
+                comunidad costarricense?</label>
+        </div>
+        <div class="custom-control custom-radio">
+            <input type="radio" id="si1" name="customRadio" class="custom-control-input" />
+            <label class="custom-control-label" for="customRadio1">SI</label>
+        </div>
+        <div class="custom-control custom-radio">
+            <input type="radio" id="no1" name="customRadio" class="custom-control-input" />
+            <label class="custom-control-label" for="customRadio2">NO</label>
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" id="textPorqueContexto" placeholder="¿Por qué?" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <h5 for="exampleFormControlTextarea1">Vitalidad de la manifestación</h5>
+            <label for="exampleFormControlTextarea1">¿Lo han aprendido sus familiares o vecinxs?</label>
+        </div>
+        <div class="custom-control custom-radio">
+            <input type="radio" id="si2" name="customRadio" class="custom-control-input" />
+            <label class="custom-control-label" for="customRadio1">SI</label>
+        </div>
+        <div class="custom-control custom-radio">
+            <input type="radio" id="no2" name="customRadio" class="custom-control-input" />
+            <label class="custom-control-label" for="customRadio2">NO</label>
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" id="textPorqueTraspaso"
+                placeholder="¿A quiénes ha traspasado ese conocimiento?" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" id="exampleFormControlTextarea1"
+                placeholder="¿Disponibilidad de ingredientes, de los objetos o espacios?" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <h5 for="exampleFormControlTextarea1">Importancia para la comunidad</h5>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkVigente">
+                <label class="form-check-label" for="defaultCheck1">
+                    Manifestación vigente
+                </label>
             </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkVulnerable">
+                <label class="form-check-label" for="defaultCheck1">
+                    Manifestación vigente vulnerable
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkMemoria">
+                <label class="form-check-label" for="defaultCheck1">
+                    Manifestación de la memoria
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <h5 for="exampleFormControlTextarea1">Datos de control</h5>
+            <input type="text" class="form-control" id="nombreEstudiante" placeholder="Introduzca su nombre" />
+        </div>
+
+    </div>
+
+    <div>
+        <button type="button" class="btn btn-primary" id="btnGuardar"
+            style="margin-top: 30px; margin-left: 500px;">Guardar</button>
+    </div>
+</div>
+
         </form>
 
     </div>
