--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <div>
-        <button type="button" class="btn btn-primary" id="btnGuardar"
+        <button type="button" class="btn btn-secondary" id="btnGuardarForm"
             style="margin-top: 30px; margin-left: 500px;">Guardar</button>
     </div>
 </div>
